# toktik-backend

./: .env_sample  .gitignore  Dockerfile  pyproject.toml
app/: main.py
app/db/: crud.py  engine.py  models.py  schemas.py
app/handlers/: presignedUrlHandler.py  presigned_url_handler.py  randomVIdeoHandler.py  random_video_handler.py  video_handler.py
app/middleware/: middleware.py
app/models/: fileModel.py  file_model.py
app/rabbitmq/: engine.py  rabbitmq.py
app/routers/: api_auth.py  api_m3u8.py  api_test.py  api_video.py  auth.py  getData.py  m3u8.py  test.py  videoUpload.py
app/sio/: socket_io.py  ws_no_prefix.py
app/utils/: auth.py  utils.py
